--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,33 @@
-dash~=1.19.0
-plotly~=4.14.3
-pandas~=1.2.1
-numpy~=1.19.5
+astroid==2.4.2
+Brotli==1.0.9
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+colorama==0.4.4
+dash==1.19.0
+dash-bootstrap-components==0.11.1
+dash-core-components==1.15.0
+dash-html-components==1.1.2
+dash-renderer==1.9.0
+dash-table==4.11.2
+dataclasses==0.6
+Flask==1.1.2
+Flask-Compress==1.8.0
+future==0.18.2
+gunicorn==20.0.4
+idna==2.10
+isort==5.6.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+joblib==0.17.0
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+numpy==1.19.5
+pandas==1.2.1
+plotly==4.14.3
+python-dateutil==2.8.1
+pytz==2020.5
+retrying==1.3.3
+six==1.15.0
+Werkzeug==1.0.1
+wrapt==1.12.1
